@@ -236,7 +236,7 @@ maketex (kpathsea kpse, kpse_file_format_type format, string* args)
     _dup2(hstdout, fileno(stdout));
     close(hstdout);
 
-    if((int)hchild == -1) {
+    if(hchild == (HANDLE)(-1)) {
       close(childpipe[0]);
       goto labeldone;
     }
